--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <html>
+	<head>
+		<title>Typography and Interaction</title>
+	</head>
+
 	
-
-	<header>
-
-	</header>
-
 	<body>
+		<header>
+			<h1>Typography and Interaction</h1>
+
+		</header>
+
+		<main>
+
+		</main>
+
+		<footer>
+			<p>© Vicky Chen, 2024</p>
+		</footer>
 
 	</body>
 </html>
