--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Typography and Interaction</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	
@@ -11,7 +13,11 @@
 		</header>
 
 		<main>
-
+				<ol>
+					<li><a href="/binding">Project 1</a></li>
+					<li><a href="#">Project 2</a></li>
+					<li><a href="#">Project 3</a></li>
+				</ol>
 		</main>
 
 		<footer>
