--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 		<main>
 				<ol>
-					<li><a href="/binding">Project 1</a></li>
-					<li><a href="#">Project 2</a></li>
-					<li><a href="#">Project 3</a></li>
+					<li><a href="/manuscript">Project 1</a></li>
+					<li><a href="/spread">Project 2</a></li>
+					<li><a href="/binding">Project 3</a></li>
 				</ol>
 		</main>
 
