--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<title>Typography and Interaction</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="reset.css" rel="stylesheet">
 	</head>
 
 	
