--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link href="reset.css" rel="stylesheet">
+		<link href="/assets/reset.css" rel="stylesheet">
 	</head>
 
 	
