--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link href="/assets/reset.css" rel="stylesheet">
-		<link href="/assets/style.css" rel="stylesheet">
+		<link href="/assets/style-landing.css" rel="stylesheet">
 	</head>
 
 	
