--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<li><a href="/manuscript">Project 1</a></li>
 					<li><a href="/spread">Project 2</a></li>
 					<li><a href="/binding">Project 3</a></li>
+					<li><a href="/links">Project 4</a></li>
 				</ol>
 		</main>
 
