--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 		<link href="/assets/reset.css" rel="stylesheet">
 		<link href="/assets/style-landing.css" rel="stylesheet">
+		<link rel="shortcut icon" type="image/png" href="assets/images/black-circle_favicon.png"/>
 	</head>
 
 	
@@ -16,7 +17,7 @@
 		</header>
 
 		<main>
-				<ol>
+				<ol class="landing-page-portfolio">
 					<li><a href="/manuscript">Project 1</a></li>
 					<li><a href="/spread">Project 2</a></li>
 					<li><a href="/binding">Project 3</a></li>
