--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Vicky Chen :)</title>
+		<title>Vicky Chen's Playground :)</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,6 +22,7 @@
 					<li><a href="/spread">Project 2</a></li>
 					<li><a href="/binding">Project 3</a></li>
 					<li><a href="/links">Project 4</a></li>
+					<li><a href="/kanban">Project 5</a></li>
 				</ol>
 		</main>
 
