setting up font styles

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 
 		</header>
 
+		<nav>
+			<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
+		</nav>
+
 		<main>
-				<ol class="landing-page-portfolio">
-					<li><a href="/manuscript">Project 1</a></li>
-					<li><a href="/spread">Project 2</a></li>
-					<li><a href="/binding">Project 3</a></li>
-					<li><a href="/links">Project 4</a></li>
-					<li><a href="/kanban">Project 5</a></li>
-				</ol>
+			<ol class="landing-page-portfolio">
+				<li><a href="/manuscript">Project 1</a></li>
+				<li><a href="/spread">Project 2</a></li>
+				<li><a href="/binding">Project 3</a></li>
+				<li><a href="/links">Project 4</a></li>
+				<li><a href="/kanban">Project 5</a></li>
+			</ol>
 		</main>
 
 		<footer>
