--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 		</header>
 
 		<nav>
+			<!-- add in images and links -->
+			<img src="">
 			<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
+			<a href="">Link 2</a>
+			<a href="">Link 3</a>
+			<a href="">Link 4</a>
 		</nav>
 
 		<main>
