--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 		</header>
 
 		<nav>
-			<!-- add in images and links -->
-			<img src="">
-			<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
-			<a href="">Link 2</a>
-			<a href="">Link 3</a>
-			<a href="">Link 4</a>
+			<div>
+				<!-- add in images and links -->
+				<img src="assets/images/arrow.png">
+				<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
+				<a href="">Link 2</a>
+				<a href="">Link 3</a>
+				<a href="">Link 4</a>
+			</div>
 		</nav>
 
 		<main>
