--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav>
 			<div>
 				<!-- add in images and links -->
-				<img src="assets/images/arrow.png">
+				<img src="assets/images/arrow.png" class="logo">
 				<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
 				<a href="">Link 2</a>
 				<a href="">Link 3</a>
