--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<nav>
 			<!-- add in images and links -->
-			<img src="assets/images/arrow.png" class="logo">
+			<img src="assets/images/arrow.png">
 			<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
 			<a href="">Link 2</a>
 			<a href="">Link 3</a>
