grid spacing content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
 		<main>
 			<ol class="landing-page-portfolio">
-				<li><a href="/manuscript">Project 1</a></li>
+				<li><a href="/manuscript">
+					<p>Project 1</p>
+				</a></li>
+				
 				<li><a href="/spread">Project 2</a></li>
 				<li><a href="/binding">Project 3</a></li>
 				<li><a href="/links">Project 4</a></li>
