--- a/index.html
+++ b/index.html
@@ -27,13 +27,24 @@
 		<main>
 			<ol class="landing-page-portfolio">
 				<li><a href="/manuscript">
-					<p>Project 1</p>
+					<h2>Project 1</h2>
 				</a></li>
-				
-				<li><a href="/spread">Project 2</a></li>
-				<li><a href="/binding">Project 3</a></li>
-				<li><a href="/links">Project 4</a></li>
-				<li><a href="/kanban">Project 5</a></li>
+
+				<li><a href="/spread">
+					<h2>Project 2</h2>
+				</a></li>
+
+				<li><a href="/binding">
+					<h2>Project 3</h2>
+				</a></li>
+
+				<li><a href="/links">
+					<h2>Project 4</h2>
+				</a></li>
+
+				<li><a href="/kanban">
+					<h3>Project 5</h3>
+				</a></li>
 			</ol>
 		</main>
 
