--- a/index.html
+++ b/index.html
@@ -27,23 +27,48 @@
 		<main>
 			<ol class="landing-page-portfolio">
 				<li><a href="/manuscript">
-					<h2>Project 1</h2>
+					<!-- add screen capture images-->
+					<img src="">
+
+					<div class="project-content">
+						<h2>Project 1</h2>
+					</div>
 				</a></li>
 
 				<li><a href="/spread">
-					<h2>Project 2</h2>
+					<!-- add screen capture images-->
+					<img src="">
+					
+					<div class="project-content">
+						<h2>Project 2</h2>
+					</div>
 				</a></li>
 
 				<li><a href="/binding">
-					<h2>Project 3</h2>
+					<!-- add screen capture images-->
+					<img src="">
+
+					<div class="project-content">
+						<h2>Project 3</h2>
+					</div>
 				</a></li>
 
 				<li><a href="/links">
-					<h2>Project 4</h2>
+					<!-- add screen capture images-->
+					<img src="">
+
+					<div class="project-content">
+						<h2>Project 4</h2>
+					</div>
 				</a></li>
 
 				<li><a href="/kanban">
-					<h3>Project 5</h3>
+					<!-- add screen capture images-->
+					<img src="">
+
+					<div class="project-content">
+						<h2>Project 5</h2>
+					</div>
 				</a></li>
 			</ol>
 		</main>
