main content styling

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
 					<!-- add screen capture images-->
 					<img src="">
 
-					<div class="project-content">
+					<div class="project_content">
 						<h2>Project 1</h2>
+
+						<div class="project_tags">
+							<ol>
+								<li>HTML</li>
+							</ol>
+						</div>
 					</div>
 				</a></li>
 
@@ -39,7 +45,7 @@
 					<!-- add screen capture images-->
 					<img src="">
 					
-					<div class="project-content">
+					<div class="project_content">
 						<h2>Project 2</h2>
 					</div>
 				</a></li>
@@ -48,7 +54,7 @@
 					<!-- add screen capture images-->
 					<img src="">
 
-					<div class="project-content">
+					<div class="project_content">
 						<h2>Project 3</h2>
 					</div>
 				</a></li>
@@ -57,7 +63,7 @@
 					<!-- add screen capture images-->
 					<img src="">
 
-					<div class="project-content">
+					<div class="project_content">
 						<h2>Project 4</h2>
 					</div>
 				</a></li>
@@ -66,7 +72,7 @@
 					<!-- add screen capture images-->
 					<img src="">
 
-					<div class="project-content">
+					<div class="project_content">
 						<h2>Project 5</h2>
 					</div>
 				</a></li>
