--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<div class="project_content">
 						<h2>Project 1</h2>
 
-						<div class="project_tags">
-							<ol>
+						<div>
+							<ol class="project_tags">
 								<li>HTML</li>
 							</ol>
 						</div>
