--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<div>
 							<ol class="project_tags">
 								<li>HTML</li>
+								<li>CSS</li>
 							</ol>
 						</div>
 					</div>
