nav and styling changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<link href="/assets/reset.css" rel="stylesheet">
 		<link href="/assets/style-landing.css" rel="stylesheet">
-		<link rel="shortcut icon" type="image/png" href="assets/images/black-circle_favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="assets/images/32_favicon.png"/>
 	</head>
 
 	
@@ -17,11 +17,14 @@
 
 		<nav>
 			<!-- add in images and links -->
-			<img src="assets/images/arrow.png">
-			<a href="assets/files/Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
-			<a href="">Link 2</a>
-			<a href="">Link 3</a>
-			<a href="">Link 4</a>
+			<img src="assets/images/arrow.png" class="logo">
+
+			<div class="navbar_links">
+				<a href="https://assets-global.website-files.com/660ab5edf37765e55506dd30/660d6d7517cedf5e43bc8bc4_Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
+				<a href="https://www.grphvics.com/portfolio">Portfolio</a>
+				<a href="">Playground</a>
+				<a href="">Contact</a>
+			</div>
 		</nav>
 
 		<main>
