getting navbar and links working

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 		<main>
 			<ol class="landing-page-portfolio">
-				<li><a href="/manuscript">
+				<li><a href="/manuscript/words-as-materials.html">
 					<!-- add screen capture images-->
 					<img src="">
 
 					<div class="project_content">
-						<h2>Project 1</h2>
+						<h2>Project 1  |  Manuscript</h2>
 
 						<div>
 							<ol class="project_tags">
@@ -50,7 +50,14 @@
 					<img src="">
 					
 					<div class="project_content">
-						<h2>Project 2</h2>
+						<h2>Project 2  |  Spread</h2>
+
+						<div>
+							<ol class="project_tags">
+								<li>HTML</li>
+								<li>CSS</li>
+							</ol>
+						</div>
 					</div>
 				</a></li>
 
@@ -59,7 +66,14 @@
 					<img src="">
 
 					<div class="project_content">
-						<h2>Project 3</h2>
+						<h2>Project 3  |  Binding</h2>
+
+						<div>
+							<ol class="project_tags">
+								<li>HTML</li>
+								<li>CSS</li>
+							</ol>
+						</div>
 					</div>
 				</a></li>
 
@@ -68,7 +82,16 @@
 					<img src="">
 
 					<div class="project_content">
-						<h2>Project 4</h2>
+						<h2>Project 4  |  Links</h2>
+
+						<div>
+							<ol class="project_tags">
+								<li>HTML</li>
+								<li>CSS</li>
+								<li>JavaScript</li>
+								<li>API</li>
+							</ol>
+						</div>
 					</div>
 				</a></li>
 
@@ -77,7 +100,15 @@
 					<img src="">
 
 					<div class="project_content">
-						<h2>Project 5</h2>
+						<h2>Project 5  |  Functions</h2>
+
+						<div>
+							<ol class="project_tags">
+								<li>HTML</li>
+								<li>CSS</li>
+								<li>JavaScript</li>
+							</ol>
+						</div>
 					</div>
 				</a></li>
 			</ol>
