--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ol class="landing-page-portfolio">
 				<li><a href="/manuscript/words-as-materials.html">
 					<!-- add screen capture images-->
-					<img src="">
+					<img src="/assets/images/manuscript.png" class="project_image">
 
 					<div class="project_content">
 						<h2>Project 1  |  Manuscript</h2>
@@ -47,7 +47,7 @@
 
 				<li><a href="/spread">
 					<!-- add screen capture images-->
-					<img src="">
+					<img src="/assets/images/spread.png">
 					
 					<div class="project_content">
 						<h2>Project 2  |  Spread</h2>
