adding in images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 				<li><a href="/spread">
 					<!-- add screen capture images-->
-					<img src="/assets/images/spread.png">
+					<img src="/assets/images/spread.png" class="project_image">
 					
 					<div class="project_content">
 						<h2>Project 2  |  Spread</h2>
@@ -63,7 +63,7 @@
 
 				<li><a href="/binding">
 					<!-- add screen capture images-->
-					<img src="">
+					<img src="/assets/images/binding.png" class="project_image">
 
 					<div class="project_content">
 						<h2>Project 3  |  Binding</h2>
@@ -79,7 +79,7 @@
 
 				<li><a href="/links">
 					<!-- add screen capture images-->
-					<img src="">
+					<img src="/assets/images/links.png" class="project_image">
 
 					<div class="project_content">
 						<h2>Project 4  |  Links</h2>
@@ -97,7 +97,7 @@
 
 				<li><a href="/kanban">
 					<!-- add screen capture images-->
-					<img src="">
+					<img src="/assets/images/functions.png" class="project_image">
 
 					<div class="project_content">
 						<h2>Project 5  |  Functions</h2>
