--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	
 	<body>
 		<header>
-			<h1>Typography and Interaction</h1>
+			<h1>Playground</h1>
+			<p>Typography and Interaction</p>
 		</header>
 
 		<nav>
