--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<nav>
 			<!-- add in images and links -->
-			<img src="assets/images/arrow.png" class="logo">
+			<a href="https://www.grphvics.com"><img src="assets/images/arrow.png" alt="blue arrow logo" class="logo"></a>
 
 			<div class="navbar_links">
 				<a href="https://assets-global.website-files.com/660ab5edf37765e55506dd30/660d6d7517cedf5e43bc8bc4_Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
