footer design and styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="navbar_links">
 				<a href="https://assets-global.website-files.com/660ab5edf37765e55506dd30/660d6d7517cedf5e43bc8bc4_Vicky-Chen_Resume.pdf" target="_blank">About Vicky</a>
 				<a href="https://www.grphvics.com/portfolio">Portfolio</a>
-				<a href="">Playground</a>
+				<a href="https://v1ckych3n.github.io/">Playground</a>
 				<a href="">Contact</a>
 			</div>
 		</nav>
@@ -116,7 +116,17 @@
 		</main>
 
 		<footer>
-			<p>© Vicky Chen, 2024</p>
+			<div class="footer_content">
+				<p>Thanks for stopping by!</p>
+				<p>Let's connect!</p>
+			</div>
+
+			<div class="footer_links">
+				<a href="https://www.linkedin.com/in/vickychen01/">LinkedIn ↗︎</a>
+				<a href="https://assets-global.website-files.com/660ab5edf37765e55506dd30/660d6d7517cedf5e43bc8bc4_Vicky-Chen_Resume.pdf" target="_blank">About Vicky ↗︎</a>
+				<a href="https://www.grphvics.com/portfolio">Portfolio ↗︎</a>
+				<a href="https://v1ckych3n.github.io/">Playground ↗︎</a>
+			</div>
 		</footer>
 
 	</body>
